added envied to configure secrets/keys via .env file

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,15 @@ dependencies:
 
   dio: ^4.0.6
   jumping_dot: ^0.0.4
+  envied: ^0.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  envied_generator: ^0.3.0
+  build_runner: ^2.3.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
