--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
   provider: ^6.0.5
 
   #whisper_dart: ^0.0.11
-  #envied: ^0.3.0
+  envied: ^0.3.0
+  record: ^4.4.4
 
 dev_dependencies:
   flutter_test:
