--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,15 +12,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
 
-  dio: ^4.0.6
+  http: ^0.13.5
+  dio: ^5.1.0
   jumping_dot: ^0.0.4
 
-  path_provider: ^2.0.13
+  path_provider: ^2.0.14
   provider: ^6.0.5
 
-  #whisper_dart: ^0.0.11
   envied: ^0.3.0
   record: ^4.4.4
 
@@ -29,7 +29,7 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.0
-  #envied_generator: ^0.3.0
+  envied_generator: ^0.3.0
   build_runner: ^2.3.3
 
 # For information on the generic Dart part of this file, see the
